portfolio/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: portfolio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - moathsalman.com
        - www.moathsalman.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: portfolio-tls
      hosts:
        - moathsalman.com
        - www.moathsalman.com
