portfolio/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: portfolio-vs
  namespace: portfolio
spec:
  hosts:
    - moathsalman.com
    - www.moathsalman.com
  gateways:
    - portfolio-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: portfolio-backend
            port:
              number: 3001
    - route:
        - destination:
            host: portfolio-frontend
            port:
              number: 80
